changed serverjs name to gptServer, so i can see the difference in pm2 list, made sure to bind the server to 0.0.0.0 instead of local host to test and make sure it can be read by all ips

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Private Chat GPT Server taking in a prompt via router and using the API given from Open AI, to access Chat GPT AI Models. ** Must have paid plan with API key for authorization**",
   "main": "server.js",
   "scripts": {
-    "start": "pm2 start server.js",
+    "start": "pm2 start gptServer.js --watch",
     "dev": "nodemon server.js"
   },
   "keywords": [],
